--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -19,8 +19,8 @@ server {
         # Docker's embedded DNS server is at 127.0.0.11
         # Using a variable for proxy_pass forces Nginx to resolve at runtime.
         resolver 127.0.0.11 valid=10s;
-        set $backend_service_name "backend"; # Service name from docker-compose.yml
-        proxy_pass http://$backend_service_name:8080; # Pass the original request URI
+        set $backend_url "${BACKEND_URL}";
+        proxy_pass $backend_url; # Pass the original request URI
         
         # Standard proxy headers
         proxy_set_header Host $host;
