--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -34,6 +34,17 @@ server {
         # proxy_read_timeout 60s;
     }
 
+    # Serve uploaded images from the shared volume
+    location /uploads/images/ {
+        alias /var/www/uploads/; # This path matches the volume mount in docker-compose.yml
+        try_files $uri =404;     # Serve the file if it exists, otherwise return a 404 error
+        
+        # Optional: Add caching headers, similar to your other static assets
+        expires 1y;
+        add_header Cache-Control "public";
+        access_log off; # Optional: turn off access logging for these images
+    }
+
     # Optional: Add caching for static assets to improve performance
     location ~* \.(?:css|js|jpg|jpeg|gif|png|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
