--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -35,7 +35,7 @@ server {
     }
 
     # Serve uploaded images from the shared volume
-    location /uploads/images/ {
+    location ^~ /uploads/images/ {
         alias /var/www/uploads/; # This path matches the volume mount in docker-compose.yml
         try_files $uri =404;     # Serve the file if it exists, otherwise return a 404 error
         
