adding client_max_body_size

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    client_max_body_size 10M; # Allow larger file uploads for recipe images
     server_name localhost; # Or your domain name
 
     # Root directory for SvelteKit static assets
