--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,18 @@
 server {
     listen 80;
-    client_max_body_size 10M; # Allow larger file uploads for recipe images
+    
+    # Increase timeouts and buffer sizes for large file uploads
+    client_max_body_size 10M;  # Max upload size (adjust as needed)
+    client_body_buffer_size 128k;
+    client_body_timeout 300s;
+    client_header_timeout 300s;
+    send_timeout 300s;
+    
+    # Enable gzip compression
+    gzip on;
+    gzip_comp_level 4;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    
     server_name localhost; # Or your domain name
 
     # Root directory for SvelteKit static assets
@@ -14,20 +26,35 @@ server {
     }
 
     # Proxy API requests to the backend service
-    # The backend service will be named 'gorecipes-backend' in Docker Compose or a Docker network
-    # The port should match the port your Go backend listens on (e.g., 8080)
     location /api/ {
         # Docker's embedded DNS server is at 127.0.0.11
-        # Using a variable for proxy_pass forces Nginx to resolve at runtime.
+        # Using a variable for proxy_pass forces Nginx to resolve at runtime
         resolver 127.0.0.11 valid=10s;
-        set $backend_service_name "backend"; # Service name from docker-compose.yml
-        proxy_pass http://$backend_service_name:8080; # Pass the original request URI
+        set $backend_service "backend:8080";
         
-        # Standard proxy headers
+        # Increase proxy timeouts for photo uploads
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+        
+        # Buffer configuration for large file uploads
+        proxy_request_buffering on;
+        proxy_buffering on;
+        proxy_buffer_size 128k;
+        proxy_buffers 8 256k;
+        proxy_busy_buffers_size 256k;
+        
+        # Standard proxy settings
+        proxy_pass http://$backend_service;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket support (if needed)
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
 
         # Optional: Increase proxy timeouts if needed for long-running API calls
         # proxy_connect_timeout 60s;
