--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,5 +31,9 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6"
+	},
+	"dependencies": {
+		"@heroicons/vue": "^2.2.0",
+		"@zerodevx/svelte-toast": "^0.9.6"
 	}
 }
