--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -30,7 +30,7 @@ FROM alpine:latest
 WORKDIR /app
 
 # Install CA certificates for HTTPS requests (needed for external API calls)
-RUN apk --no-cache add ca-certificates
+RUN apk --no-cache add ca-certificates netcat-openbsd
 
 # Copy the binary from the builder stage
 COPY --from=builder /app/gorecipes-backend .
