--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -63,9 +63,9 @@ server {
     }
 
     # Serve uploaded images from the shared volume
-    location ^~ /uploads/images/ {
-        alias /var/www/uploads/; # This path matches the volume mount in docker-compose.yml
-        try_files $uri =404;     # Serve the file if it exists, otherwise return a 404 error
+    location /uploads/ {
+        alias /var/www/uploads/;
+        try_files $uri $uri/ =404;
         
         # Optional: Add caching headers, similar to your other static assets
         expires 1y;
