--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -63,9 +63,9 @@ server {
     }
 
     # Serve uploaded images from the shared volume
-    location /uploads/ {
+    location ^~ /uploads/ {
         alias /var/www/uploads/;
-        try_files $uri $uri/ =404;
+        try_files $uri =404;
         
         # Optional: Add caching headers, similar to your other static assets
         expires 1y;
